--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <img class="img-flex" src="images/andromeda.jpg" alt="">
     <div class="banner-content">
       <div>
-        <h1 class="text-center yotta push-0">Space & Time Explorer Person</h1>
-        <p class="text-center tera">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+        <h1 class="text-center yotta push-0 gutter-2">Space & Time Explorer Person</h1>
+        <p class="text-center tera gutter-2">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
