--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-  <div class="banner">
+  <div class="banner wrapper">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
     <div class="banner-content">
       <div>
-        <h1 class="text-center yotta push-0 gutter-2">Space & Time Explorer Person</h1>
-        <p class="text-center tera gutter-2">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+        <h1 class="text-center yotta push-0 gutter">Space & Time Explorer Person</h1>
+        <p class="text-center tera gutter">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
