took away the 2 in gutter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="banner-content wrapper">
       <div>
         <h1 class="text-center yotta push-0">Space & Time Explorer Person</h1>
-        <p class="text-center tera gutter-2">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+        <p class="text-center tera gutter-">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
